# VFS-Comp-2025

./: .bashrc  .gitignore  .gitmodules  .profile  README.md  mav.parm  mav.tlog  mav.tlog.raw
ardupilot_gazebo/worlds/: iris_runway.sdf
ardupilot_gz/ardupilot_gz_bringup/config/: iris_bridge.yaml
ardupilot_gz/ardupilot_gz_gazebo/worlds/: iris_runway.sdf
circle_detector/: package.xml  setup.cfg
circle_detector/circle_detector/: circle_detector.py  circle_detector.py.bak
circle_detector_only/: circle_detector.py
src/ardupilot_gazebo/: CMakeLists.txt  package.xml
src/ardupilot_gazebo/models/iris_multi_0/: model.config  model.sdf
src/ardupilot_gazebo/models/iris_multi_1/: model.config  model.sdf
src/ardupilot_gazebo/models/iris_multi_2/: model.config  model.sdf
src/ardupilot_gz/ardupilot_gz_bringup/: CMakeLists.txt  package.xml  setup.py
src/ardupilot_gz/ardupilot_gz_bringup/launch/: iris_runway_swarm_final.launch.py  iris_runway_swarm_fixed.launch.py  iris_runway_swarm_simple.launch.py  iris_single_debug.launch.py  iris_single_test.launch.py
src/ardupilot_gz/ardupilot_gz_gazebo/: CMakeLists.txt  package.xml  setup.py
src/ardupilot_gz/ardupilot_gz_gazebo/ardupilot_gz_gazebo/: __init__.py
src/ardupilot_gz/ardupilot_gz_gazebo/worlds/: iris_runway_swarm_fixed.sdf  iris_runway_swarm_minimal.sdf  iris_single_test.sdf
src/ardupilot_gz_bringup/: package.xml  setup.py
src/ardupilot_gz_bringup/ardupilot_gz_bringup/: __init__.py
src/ardupilot_gz_bringup/launch/: iris_single_debug.launch.py
src/circle_detector/circle_detector/: circle_detector.py
src/src/circle_detector/: setup.py
src/test/logs/2025-01-05/flight1/: defaults.parm  flight.tlog  flight.tlog.raw  mav.parm
src/test_pkg/: package.xml  setup.py
src/test_pkg/test_pkg/: __init__.py
