<?xml version="1.0"?>
<package format="3">
  <name>test_pkg</name>
  <version>1.0.0</version>
  <description>Test package for debugging</description>
  <maintainer email="test@example.com">Test</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>