<?xml version="1.0"?>
<package format="3">
  <name>ardupilot_gz_bringup</name>
  <version>1.0.0</version>
  <description>Launch files for ArduPilot-Gazebo integration</description>
  <maintainer email="dev@ardupilot.org">ArduPilot Team</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>ardupilot_sitl</depend>
  <depend>ros_gz_sim</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>