<?xml version="1.0"?>
<package format="3">
  <name>ardupilot_gz_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo worlds and configurations for ArduPilot integration</description>
  <maintainer email="dev@ardupilot.org">ArduPilot Team</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>