<?xml version="1.0"?>
<package format="3">
  <name>ardupilot_gz_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo worlds and configurations for ArduPilot integration</description>
  <maintainer email="dev@ardupilot.org">ArduPilot Team</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>